[project]
name = "collab-ondevice-learning"
version = "0.1.0"
description = "Collaborative on-device learning at the edge: comparing what to share between devices (weights vs predictions) under non-IID + sensor shift."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[tool.uv]
# This is a runnable experiment, not an installable package.
package = false
